--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -3,11 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>NPuzzle Web</title>
-        <link rel="stylesheet" href="/static/css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="main-container">
+        <div id="root"></div>
+        <noscript>
+            You need to enable JavaScript to run this app.
+        </noscript>
+        <script src="/static/index_bundle.jsx"></script>       
+        <!-- <div class="main-container">
             <h1>NPuzzle Web</h1>
             <div class="puzzle-container">
                 {% for case in range(16) %}
@@ -20,6 +24,6 @@
                 <div class="form-caption">Input list of numbers</div>
                 <input type="text" name="puzzle" class="puzzle-input">
             </form>
-        </div>
+        </div> -->
     </body>
 </html>
