--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>NPuzzle Web</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="root"></div>
